src/main/java/com/test/webtest/global/error/model/ErrorResponse.java
package com.test.webtest.global.error.model;

import java.time.Instant;

public record ErrorResponse(
        String code, String message, Instant timeStamp
) {}
